# simple_cmake_project_googletest

./: CMakeLists.txt  README.md  build_and_run.bat  build_and_run.sh  build_and_run_app_only.bat  build_and_run_app_only.sh
include/: hello_world.h
scripts/: build_and_run_all.cmake  build_and_run_app.cmake  build_and_run_ut.cmake
src/: CMakeLists.txt  hello_world.cpp  main.cpp
tests/: CMakeLists.txt  test_hello_world.cpp
